network.yml
Description: >
  Harold | Highly available webapp
  A cloudformation template to deply a highly available web app

Parameters:
  EnvironmentName:
    Description: An environment name that will be prefixed to resource names
    Type: String
    Default: applaunch

  VpcCIDR:
    Description: Please enter the IP range  for this VPC
    Type: String
    Default: 10.0.0.0/16

  PublicSub1CIDR:
    Description: Please enter the IP range for the public subnet in the first Availability Zone
    Type: String
    Default: 10.0.0.0/24

  PublicSub2CIDR:
    Description: Please enter the IP range (CIDR notation) for the public subnet in the second Availability Zone
    Type: String
    Default: 10.0.1.0/24

  PrivateSub1CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the first Availability Zone
    Type: String
    Default: 10.0.2.0/24

  PrivateSub2CIDR:
    Description: Please enter the IP range (CIDR notation) for the private subnet in the second Availability Zone
    Type: String
    Default: 10.0.3.0/24

Resources:
# Create the vpc

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCIDR    #reference the cidrblock from the parameters above
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  PublicSub1: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC  #reference the vpc from the parameters above
      AvailabilityZone: !Select [0, !GetAZs ""]  #select from the available AZs and pick the first one
      CidrBlock: !Ref PublicSub1CIDR  #reference the cidrblock from the parameters above
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-Public Subnet (AZ1)

  PublicSub2: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""] #select from the available AZs and pick the first one
      CidrBlock: !Ref PublicSub2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-Public Subnet (AZ2)

  PrivateSub1: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [0, !GetAZs ""] # set this private subnet in the first AZ
      CidrBlock: !Ref PrivateSub1CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-Private Subnet (AZ1)

  PrivateSub2: 
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: !Select [1, !GetAZs ""]
      CidrBlock: !Ref PrivateSub2CIDR
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${EnvironmentName}-Private Subnet (AZ2)

  IGW:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Ref EnvironmentName

  IGWAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref IGW #reference it from the above internet gateway
      VpcId: !Ref VPC

  NATGWEIP1:
    Type: AWS::EC2::EIP
    DependsOn: IGWAttachment
    Properties:
      Domain: vpc

  NATGWEIP2:
    Type: AWS::EC2::EIP
    DependsOn: IGWAttachment
    Properties:
      Domain: vpc

  NATGW1: 
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGWEIP1.AllocationId
      SubnetId: !Ref PublicSub1

  NATGW2: 
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NATGWEIP2.AllocationId
      SubnetId: !Ref PublicSub2

# Let's work on the routes and route tables
  PublicRT:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${EnvironmentName}-Public Routes

  DefaultPublicRoute: 
    Type: AWS::EC2::Route
    DependsOn: IGW
    Properties: 
      RouteTableId: !Ref PublicRT
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref IGW

  PublicSub1RTAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRT
      SubnetId: !Ref PublicSub1

  PublicSub1RTAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PublicRT
        SubnetId: !Ref PublicSub2

  PrivateRT1:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC
      Tags: 
        - Key: Name 
          Value: !Sub ${EnvironmentName}-Private Routes (AZ1)

  DefaultPrivateRoute1:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PrivateRT1
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NATGW1

  PrivateSub1RTAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PrivateRT1
        SubnetId: !Ref PrivateSub1

  PrivateRT2:
      Type: AWS::EC2::RouteTable
      Properties: 
        VpcId: !Ref VPC
        Tags: 
          - Key: Name 
            Value: !Sub ${EnvironmentName}-Private Routes (AZ2)

  DefaultPrivateRoute2:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref PrivateRT2
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NATGW2          

  PrivateSub2RTAssociation:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref PrivateRT2
        SubnetId: !Ref PrivateSub2

# Create IAM role to read S3 buckets

  S3ReadOnly:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub ${EnvironmentName}-Role
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - sts:AssumeRole
      Path: "/"

# Create the role policy
  Policies:
    Type: AWS::IAM::Policy
    Properties:
      PolicyName: AmazonS3ReadOnlyAccess
      PolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Action:
              - s3:Get*
              - s3:List*
            Resource:
              - arn:aws:s3:::my-test-bucket-cli-user
              - arn:aws:s3:::my-test-bucket-cli-user/*
      Roles:
        - Ref: S3ReadOnly


# Create profile role for the app

  ProfileForApp:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
        - Ref: S3ReadOnly
# Let's do some security work now
# Load balancer security group
  LBSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows http to our load balancer
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0  #traffic from any ip is allowed in
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0


# Next is web server security group
  ServerSecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to our hosts and SSH from local only
      VpcId: !Ref VPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 80
        ToPort: 80
        CidrIp: 0.0.0.0/0
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
      - IpProtocol: tcp
        FromPort: 0
        ToPort: 65535
        CidrIp: 0.0.0.0/0

# It's time to work on the launch configurations
  LaunchConfig:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          apt-get update -y 
          apt-get install unzip awscli -y
          apt-get install apache2 -y
          systemctl start apache2.service
          cd /var/www/html
          rm /var/www/html
          aws s3 cp s3://my-test-bucket-cli-user/Project.zip .
          unzip -o Project.zip
          echo "It works! Udagram, Udacity" > index.html
      ImageId: ami-0729e439b6769d6ab #get this from the AMI catalog
      IamInstanceProfile: !Ref ProfileForApp
      SecurityGroups:
        - Ref: ServerSecGroup
      InstanceType: t2.nano #pick the type that will serve you better at the right cost
      BlockDeviceMappings:
        - DeviceName: "/dev/sdk"
          Ebs:
            VolumeSize: "10" #10GB EBS volume

# Time to balance the load and autoscale
# Load balancer first
  WebLB:
      Type: AWS::ElasticLoadBalancingV2::LoadBalancer
      Properties:
        Subnets:
          - !Ref PublicSub1
          - !Ref PublicSub2
        SecurityGroups:
          - Ref: LBSecGroup

# Then the target group for the load balancer

  WebTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckIntervalSeconds: 15 #check health every 15 seconds
      HealthCheckPath: /
      HealthCheckProtocol: HTTP
      HealthCheckTimeoutSeconds: 8
      HealthyThresholdCount: 2 # declare health if 2 consecutive checks return healthy
      Port: 80
      Protocol: HTTP
      UnhealthyThresholdCount: 5 #declare unhealthy if 5 consecutive checks return unhealthy
      VpcId: !Ref VPC

# Create the load balancer listener
  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      DefaultActions:
      - Type: forward
        TargetGroupArn:
          Ref: WebTargetGroup
      LoadBalancerArn:
        Ref: WebLB
      Port: '80'
      Protocol: HTTP

      # Create the listening rule

  ListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
      - Type: forward
        TargetGroupArn: !Ref 'WebTargetGroup'
      Conditions:
      - Field: path-pattern
        Values: [/]
      ListenerArn: !Ref 'Listener'
      Priority: 1

  # Now to the autoscaling group
  WebAutoscalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
        VPCZoneIdentifier:  
          - !Ref PrivateSub1
          - !Ref PrivateSub2 
        LaunchConfigurationName:
            Ref: LaunchConfig
        MinSize: '4' #the minimum instances
        MaxSize: '6' #the maximum instances
        TargetGroupARNs:
          - Ref: WebTargetGroup

Outputs:
  VPC:
    Description: A reference to the created VPC
    Value: !Ref VPC
    Export:
      Name: !Sub ${EnvironmentName}-VPCID #The vpc name to output for input purposes

  WebAppLBDNS:
    Description: DNS name or Public URL of the Load Balancer
    Value: !Join ["", ["http://", !GetAtt WebLB.DNSName]]
    Export:
      Name: !Sub ${EnvironmentName}-LB-DNS     #The load balancer DNS to output for input purposes
